# samus-manus

./: .gitignore  AGENTS.md  LICENSE  MEMORY.md  MEMORY_CLI.md  README.md  README.samus_manus_mvp.md  RECORDS.md  bootstrap.ps1  bootup.md  bootup.ps1  colorize_and_label.py  demo_60s.ps1  demo_paint_spiral.py  draw_friends.py  draw_iron_hand.py  draw_open_palm_flat.py  draw_smiley.py  draw_square.py  eyes.py  gif_to_mp4.py  hands.py  heartbeat.py  heartbeat_state.json  make_gif_demo.py  manifest.md  memory.db  memory.py  memory_cli.py  molt_scan_results.json  package-lock.json  persona-hanna-vignette.md  persona-hanna.md  pif.mjs  pyproject.toml  requirements-voice.txt  requirements.samus_manus_mvp.txt  requirements.txt  samus_agent.py  samus_manus.py  (+12 more)
deprecated/: bootup2.md
docs/: index.md
samus_manus_mvp/: DEPRECATED.md  MEMORY_CLI.md  README.md  approval_cli.py  draw_smiley.py  eyes.py  hands.py  hardware_stubs.py  heartbeat.py  heartbeat_overlay.py  heartbeat_state.json  heartbeat_ui.py  knowledge.py  memory.db  memory.py  memory_cli.py  quant_cli.py  requirements.txt  samus_agent.py  startup_restore.py  tasks.json  voice_assistant.py  voice_loop.py
tests/: conftest.py  test_approval_cli.py  test_approval_cli_flamegraph.py  test_eyes.py  test_hands.py  test_heartbeat.py  test_heartbeat_audit.py  test_heartbeat_overlay.py  test_heartbeat_tts.py  test_heartbeat_ui.py  test_knowledge.py  test_quant.py  test_samus_agent.py
tools/: PLAYWRIGHT.md  _compare_screens.py  _make_refresh_template.py  backup_state.py  check_moltbook_me.py  claim_moltbook.py  draw_cat.py  (+27 more)
(+3 files in other folders)
